1. Updated Library Installation
  Changed from installing only libbz2-dev to installing all required compression libraries:

  - name: Install system libraries
    run: |
      sudo apt-get update
      sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev

  2. Applied to All Jobs

  Updated all three CI jobs:
  - ✅ test job (line 38) - active
  - ✅ quality job (line 102) - commented out but ready
  - ✅ docs job (line 164) - commented out but ready

  3. Libraries Installed

  The workflow now installs the development packages for:
  - libzstd-dev - Zstandard compression
  - liblz4-dev - LZ4 fast compression
  - libsnappy-dev - Snappy compression (Google)
  - libblosc-dev - Blosc meta-compressor
  - libbz2-dev - Bzip2 compression

  How It Works

  On Ubuntu runners, these packages install both:
  - Dynamic libraries (.so files) in /usr/lib/x86_64-linux-gnu/
  - Static libraries (.a files) in the same location
  - Header files needed for compilation

  The Zig NIFs in zig_codecs.ex will now find these libraries through:
  1. The system library paths that CompressionConfig.library_dirs() discovers
  2. The {:system, "library_name"} declarations in the Zig configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,10 @@ jobs:
           #   otp: '25.3'
 
     steps:
-      - name: Install bzip2
+      - name: Install system libraries
         run: |
           sudo apt-get update
-          sudo apt-get install -y libbz2-dev
+          sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
           # Find and set the bzip2 static library path
           BZIP2_LIB=$(find /usr/lib -name libbz2.a 2>/dev/null | head -n1)
           if [ -z "$BZIP2_LIB" ]; then
@@ -96,10 +96,10 @@ jobs:
   #   runs-on: ubuntu-latest
 
   #   steps:
-  #     - name: Install bzip2
+  #     - name: Install system libraries
   #       run: |
   #         sudo apt-get update
-  #         sudo apt-get install -y libbz2-dev
+  #         sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
   #         # Find and set the bzip2 static library path
   #         BZIP2_LIB=$(find /usr/lib -name libbz2.a 2>/dev/null | head -n1)
   #         if [ -z "$BZIP2_LIB" ]; then
@@ -158,10 +158,10 @@ jobs:
   #   runs-on: ubuntu-latest
 
   #   steps:
-  #     - name: Install bzip2
+  #     - name: Install system libraries
   #       run: |
   #         sudo apt-get update
-  #         sudo apt-get install -y libbz2-dev
+  #         sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
   #         # Find and set the bzip2 static library path
   #         BZIP2_LIB=$(find /usr/lib -name libbz2.a 2>/dev/null | head -n1)
   #         if [ -z "$BZIP2_LIB" ]; then
