--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,13 @@ jobs:
     name: Test (Elixir ${{ matrix.elixir }} / OTP ${{ matrix.otp }})
     runs-on: ubuntu-latest
 
+    # Optional MongoDB service (uncomment if running :mongo tagged tests)
+    # services:
+    #   mongodb:
+    #     image: mongo:5.0
+    #     ports:
+    #       - 27017:27017
+
     strategy:
       fail-fast: false
       matrix:
@@ -74,6 +81,9 @@ jobs:
         if: ${{ matrix.lint }}
 
       - name: Run tests
+        # Note: Cloud storage tests (:s3, :gcs, :azure, :mongo) are excluded by default
+        # They require external services and credentials
+        # To run them: mix test --include s3 --include gcs --include azure --include mongo
         run: mix test --trace
 
       - name: Run tests with coverage
