closed #90 - Add back to the CI previous versions of Elixir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,10 @@ jobs:
             lint: true
             coverage: true
           # Previous versions for compatibility
-          - elixir: '1.18.4'
-            otp: '27.3'
-          # - elixir: '1.17.3'
-          #   otp: '26.2'
+          - elixir: "1.18.4"
+            otp: "27.3"
+          - elixir: "1.17.3"
+            otp: "26.2"
           # - elixir: '1.16.3'
           #   otp: '25.3'
 
