--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,96 +99,109 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # quality:
-  #   name: Code Quality
-  #   runs-on: ubuntu-latest
+  quality:
+    name: Code Quality
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Install system libraries
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
-  #     - name: Install Zig
-  #       uses: goto-bus-stop/setup-zig@v2
-  #       with:
-  #         version: 0.15.2
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #     - name: Setup Elixir
-  #       uses: erlef/setup-beam@v1
-  #       with:
-  #         elixir-version: "1.19.5"
-  #         otp-version: "28.1"
+    steps:
+      - name: Install system libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
 
-  #     - name: Restore dependencies cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           deps
-  #           _build
-  #         key: ${{ runner.os }}-mix-quality-${{ hashFiles('**/mix.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-mix-quality-
+      - name: Install Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.15.2
 
-  #     - name: Install dependencies
-  #       run: mix deps.get
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Run Credo
-  #       run: mix credo --strict
+      - name: Setup Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: "1.19.5"
+          otp-version: "28.1"
 
-  #     - name: Restore PLT cache
-  #       uses: actions/cache@v4
-  #       id: plt-cache
-  #       with:
-  #         path: priv/plts
-  #         key: ${{ runner.os }}-plt-${{ hashFiles('**/mix.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-plt-
+      - name: Restore dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            deps
+            _build
+          key: ${{ runner.os }}-mix-quality-${{ hashFiles('**/mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-mix-quality-
 
-  #     - name: Create PLTs
-  #       if: steps.plt-cache.outputs.cache-hit != 'true'
-  #       run: mix dialyzer --plt
+      - name: Install dependencies
+        run: mix deps.get
 
-  #     - name: Run Dialyzer
-  #       run: mix dialyzer --format github
+      - name: Compile dependencies
+        run: mix deps.compile
 
-  # docs:
-  #   name: Documentation
-  #   runs-on: ubuntu-latest
+      - name: Run Credo
+        run: mix credo --strict
 
-  #   steps:
-  #     - name: Install system libraries
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
-  #     - name: Install Zig
-  #       uses: goto-bus-stop/setup-zig@v2
-  #       with:
-  #         version: 0.15.2
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+      - name: Restore PLT cache
+        uses: actions/cache@v4
+        id: plt-cache
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-plt-${{ hashFiles('**/mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-plt-
 
-  #     - name: Setup Elixir
-  #       uses: erlef/setup-beam@v1
-  #       with:
-  #         elixir-version: "1.19.5"
-  #         otp-version: "28.1"
+      - name: Create PLTs
+        if: steps.plt-cache.outputs.cache-hit != 'true'
+        run: mix dialyzer --plt
 
-  #     - name: Restore dependencies cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           deps
-  #           _build
-  #         key: ${{ runner.os }}-mix-docs-${{ hashFiles('**/mix.lock') }}
+      - name: Run Dialyzer
+        run: mix dialyzer --format github
 
-  #     - name: Install dependencies
-  #       run: mix deps.get
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
 
-  #     - name: Generate documentation
-  #       run: mix docs
+    steps:
+      - name: Install system libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libzstd-dev liblz4-dev libsnappy-dev libblosc-dev libbz2-dev
 
-  #     - name: Check documentation coverage
-  #       run: |
-  #         echo "Checking for undocumented public functions..."
-  #         mix docs 2>&1 | grep -i "warning" && exit 1 || exit 0
+      - name: Install Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.15.2
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: "1.19.5"
+          otp-version: "28.1"
+
+      - name: Restore dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            deps
+            _build
+          key: ${{ runner.os }}-mix-docs-${{ hashFiles('**/mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-mix-docs-
+
+      - name: Install dependencies
+        run: mix deps.get
+
+      - name: Compile dependencies
+        run: mix deps.compile
+
+      - name: Generate documentation
+        run: mix docs
+
+      - name: Check documentation coverage
+        run: |
+          echo "Checking for undocumented public functions..."
+          mix docs 2>&1 | grep -i "warning" && exit 1 || exit 0
