--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - elixir: "1.20.0-rc.1"
+            otp: "28.3.1"
           # Latest stable versions
           - elixir: "1.19.5"
-            otp: "28.1"
+            otp: "28.3.1"
             lint: true
             coverage: true
           # Previous versions for compatibility
