--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install Zig
         uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.12.0
+          version: 0.13.0
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -114,7 +114,7 @@ jobs:
       - name: Install Zig
         uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.12.0
+          version: 0.13.0
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -175,7 +175,7 @@ jobs:
       - name: Install Zig
         uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.12.0
+          version: 0.13.0
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -208,4 +208,4 @@ jobs:
       - name: Check documentation coverage
         run: |
           echo "Checking for undocumented public functions..."
-          mix docs 2>&1 | grep -i "warning" && exit 1 || exit 0
+          mix docs --warnings-as-errors
