--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@ erl_crash.dump
 /config/*.secret.exs
 .elixir_ls/
 /local_docs/
+/experiments/
+/.idea/
+/.vscode/
+/experiment_*/
+/exp*/
+/Mnesia.nonode@nohost/
+/priv/lib/
+/priv/plts/
+/tmp/
+/temp/
+/temperature/
+/results/
+/saved_data/
+/pressure/
+/humidity/
+/child/child/
+/data/
